--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,21 @@
 ---
-vhost_server_name: example.com
-vhost_server_alias: www.example.com
-vhost_server_admin: admin@example.com
-vhost_document_root: /var/www/{{ vhost_server_name }}
-vhost_document_root_owner: www-data
-vhost_document_root_group: www-data
-vhost_document_root_mode: 0755
-vhost_error_log: /var/log/apache2/{{ vhost_server_name }}_error.log
-vhost_custom_log: /var/log/apache2/{{ vhost_server_name }}_access.log
+vhosts_port: 80
+vhosts_document_root_owner: www-data
+vhosts_document_root_group: www-data
+vhosts_document_root_mode: "u=rwx,g=rx,o=rx"
+vhosts_error_log: /var/log/apache2/error.log
+vhosts_custom_log: /var/log/apache2/access.log
+
+vhosts:
+  - name: example host
+    server_name: example.com
+    server_aliases:
+      - www.example.com
+    server_admin: admin@example.com
+    document_root: /var/www/example.com
+    port: "{{ vhosts_port }}"
+    document_root_owner: "{{ vhosts_document_root_owner }}"
+    document_root_group: "{{ vhosts_document_root_group }}"
+    document_root_mode: "{{ vhosts_document_root_mode }}"
+    error_log: /var/log/apache2/example.com_error.log
+    custom_log: /var/log/apache2/example.com_access.log
