--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,16 +6,16 @@
     owner={{ item.document_root_owner|default(vhosts_document_root_owner) }}
     group={{ item.document_root_group|default(vhosts_document_root_group) }}
     mode={{ item.document_root_mode|default(vhosts_document_root_mode) }}
-  with_items: vhosts
+  with_items: "{{ vhosts }}"
 
 - name: config virtual host
   template: src=vhost.conf.j2 dest=/etc/apache2/sites-available/{{ item.server_name}}.conf backup=yes
-  with_items: vhosts
+  with_items: "{{ vhosts }}"
   register: vhost_changed
 
 - name: enable virtual host
   command: a2ensite {{ item.server_name }}.conf creates=/etc/apache2/sites-enabled/{{ item.server_name }}.conf
-  with_items: vhosts
+  with_items: "{{ vhosts }}"
   register: vhost_enabled
 
 - name: check for syntax errors in vhost conf
